# TheBookBot

./: LICENSE  README.md
the_book_bot/: Cargo.toml
the_book_bot/src/: bot.rs  main.rs
the_book_bot/src/bot/: verse.rs
the_book_bot/src/bot/verse/: types.rs
